--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -6,7 +6,7 @@
 }
 
 /* Body */
-body {
+/* body {
   height: 100vh;
   font-size: 16px;
   color: #fff;
@@ -14,7 +14,7 @@ body {
   justify-content: center;
   align-items: center;
 
-}
+} */
 
 
 .login-page {
