--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -121,6 +121,9 @@ h1{
   display: flex;
   flex-direction: column;
 }
+.login-heading1{
+  color: white;
+}
 
 /* Input Styles */
 /* input[type="email"] {
