--- a/frontend/src/styles/travelpackage.css
+++ b/frontend/src/styles/travelpackage.css
@@ -1,14 +1,18 @@
 .travel-packages {
     padding: 20px;
-    margin-top: 20px; /* Add this line to create space between Navbar and the packages */
+    margin-top: 90px; /* Add this line to create space between Navbar and the packages */
   }
   
   .packages-list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
-    margin-top: 20px;
+   
   }
+  .package-heading{
+    margin-bottom: 28px;
+  }
+
   
   .package-card {
     border: 1px solid #ddd;
@@ -61,3 +65,39 @@
     background-color: #0056b3;
   }
   
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+  max-width: 500px;
+  width: 100%;
+}
+
+.modal img {
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 30px;
+  cursor: pointer;
+}
