--- a/frontend/src/styles/train.css
+++ b/frontend/src/styles/train.css
@@ -7,6 +7,8 @@
     background-color: #f9f9f9;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-top: 160px;
+    /* marginTop:"130px" */
   }
   
   .train-details-container h1 {
