--- a/frontend/src/styles/forgotpassword.css
+++ b/frontend/src/styles/forgotpassword.css
@@ -98,7 +98,7 @@ input[type="email"]::placeholder{
 
 /* Button */
 button {
-    background: linear-gradient(135deg, #ff416c, #ff4b2b); /* Vibrant gradient button */
+    background: linear-gradient(135deg, #1d5675, #5e76b4); /* Vibrant gradient button */
     color: #fff;
     border: none;
     padding: 12px 15px;
@@ -115,8 +115,8 @@ button {
 }
 
 button:hover {
-    background: linear-gradient(135deg, #ff4b2b, #ff416c); /* Reverse gradient on hover */
-    box-shadow: 0 4px 12px rgba(255, 75, 43, 0.5);
+    background: linear-gradient(135deg, #1b6b86, #4490bc); /* Reverse gradient on hover */
+    box-shadow: 0 4px 12px rgba(18, 17, 17, 0.5);
     transform: scale(1.03);
 }
 
@@ -136,7 +136,7 @@ a {
 }
 
 a:hover {
-    color: #ff416c;
+    color: #47ff41;
     opacity: 1;
 }
 
