--- a/frontend/src/styles/register.css
+++ b/frontend/src/styles/register.css
@@ -76,7 +76,7 @@
   }
   
   .registration-button:hover {
-    background-color: #ee0979;
+    background-color: #4e09ee;
     transform: translateY(-3px);
   }
   
