--- a/frontend/src/components/Packages.css
+++ b/frontend/src/components/Packages.css
@@ -5,9 +5,9 @@
 
 .packages-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 0.5fr));
   gap: 2rem;
-  max-width: 1200px;
+  max-width: 1500px;
   margin: 0 auto;
 }
 
@@ -25,7 +25,7 @@
 }
 
 .package-image {
-  height: 200px;
+  height: 180px;
   overflow: hidden;
 }
 
@@ -40,19 +40,19 @@
 }
 
 .package-title {
-  font-size: 1.5rem;
-  color: #2c3e50;
+  font-size: 1.4rem;
+  color: #171818;
   margin-bottom: 0.5rem;
 }
 
 .package-details {
   margin: 1rem 0;
-  color: #666;
+  color: #111010;
 }
 
 .package-price {
-  font-size: 1.5rem;
-  color: #0077B6;
+  font-size: 1.2rem;
+  color: #252929;
   font-weight: bold;
   margin: 1rem 0;
 }
@@ -60,7 +60,7 @@
 .book-btn {
   width: 100%;
   padding: 0.8rem;
-  background: #0077B6;
+  background: #155b81;
   color: white;
   border: none;
   border-radius: 5px;
@@ -70,5 +70,5 @@
 }
 
 .book-btn:hover {
-  background: #0077B6;
+  background: #818689;
 }
